[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/screens/main_menu_screen.gd" type="Script" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.tscn" type="PackedScene" id=7]

[node name="MainMenuScreen" type="VBoxContainer"]
rect_min_size = Vector2( 1024, 768 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
screen_name = "main_menu"
is_back_button_shown = false
is_about_button_shown = true
is_settings_button_shown = true
is_nav_bar_logo_shown = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuImageContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 384.0
margin_right = 640.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
custom_constants/separation = 0

[node name="Spacer" parent="VBoxContainer/MainMenuImageContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 128.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size = Vector2( 0, 30 )

[node name="Spacer2" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 130.0
margin_right = 512.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 60 )
size = Vector2( 0, 60 )

[node name="StartGameButton" parent="VBoxContainer" instance=ExtResource( 7 )]
margin_left = 432.0
margin_top = 194.0
margin_right = 592.0
margin_bottom = 274.0
rect_min_size = Vector2( 160, 80 )
texture_key = "go_normal"
texture_scale = Vector2( 1.5, 1.5 )
size_override = Vector2( 160, 80 )

[node name="Spacer5" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 278.0
margin_right = 512.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 30 )
size = Vector2( 0, 30 )

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
